# sih_spark_ai

./: Dockerfile  app.py  config.py  main.py  migrate.py  pyproject.toml  requirements.txt  todo.md
